manifests/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: prometheus-example-app2
  name: prometheus-example-app2
  namespace: application-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-example-app2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-example-app2
    spec:
      containers:
      - name: prometheus-example-app2
        image: quay.io/brancz/prometheus-example-app:v0.3.0
        ports:
        - name: webapp
          containerPort: 8080
